--- a/map.css
+++ b/map.css
@@ -6,19 +6,23 @@ html, body {
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center;     /* Center vertically */
-  }
+}
      
-  #map {
+#map {
     width: 100%;    /* Adjust width to your desired size */
     height: 100%;   /* Adjust height to your desired size */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow for effect */
     border-radius: 8px; /* Optional: rounded corners */
-  }
+}
 
-  #map svg {
+#map svg {
     position: absolute;
     z-index: 1;
     width: 100%;
     height: 100%;
     pointer-events: none;
-  }
+}
+
+circle {
+    pointer-events: auto;
+}
